--- a/index.html
+++ b/index.html
@@ -5,55 +5,17 @@
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<form action="https://colorlib.com">
+<form action="submit.php" method="post">
 <label for="Username">Username</label>
-<input type="text" name="Username" id="Username" required>
+<input type="text" name="Username" id="Username"  required>
 <br><br>
 <label>Password</label>
-<input type="Password" name="Password" id="Password" required>
+<input type="Password" name="Password" id="Password"  required>
+<br><br>
+<label>Name</label>
+<input type="text" name="name" id="name" required>
 <br><br>
 <input type="submit" value="submit">
-
-
-
-
-
-
-
-
 </form>
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
